[package]
name = "envvar"
version = "0.1.0"
authors = ["Maximilian Hristache"]
license = "MIT"
description = """
This tiny crate provides the `var()` function which is the same as 
[`std::env::var`](https://doc.rust-lang.org/stable/std/env/fn.var.html) but the 
`NotPresent` variant of `VarError` provides the name of the missing environment variable"
homepage = "https://github.com/maximih/envvar
"""
repository = "https://github.com/maximih/envvar"
homepage = "https://github.com/maximih/envvar"
documentation = "https://doc.rust-lang.org/stable/std/env/fn.var.html"
